[package]
name = "pdf_form"
version = "0.5.0"
authors = ["Jake <jsandler18@gmail.com>", "Malte <voos.malte@gmail.com>", "Emulator000 <emulator@hotmail.it>, Bartosz <unxcepted9@gmail.com>"]
readme = "README.md"
keywords = ["pdf", "form"]
description = "A library for programatically filling out pdf forms"
license = "MIT"
edition = "2021"

[dependencies]
bitflags = "2.4.0"
derive-error = "0.0.5"
lopdf = "0.31.0"
